-- Banco robusto para a plataforma da igreja
-- Compatível com MySQL 8+

SET NAMES utf8mb4;
SET time_zone = '+00:00';

CREATE DATABASE IF NOT EXISTS igreja_cursos_v2
  CHARACTER SET utf8mb4
    COLLATE utf8mb4_unicode_ci;

USE igreja_cursos_v2;

-- ============================
-- TABELA DE FILIAIS
-- ============================
CREATE TABLE IF NOT EXISTS ID_FILIAL (
    IDL_ID INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDL_NOME VARCHAR(120) NOT NULL,
    IDL_CIDADE VARCHAR(100) NULL,
    IDL_ESTADO CHAR(2) NULL,
    IDL_ATIVA TINYINT(1) NOT NULL DEFAULT 1,
    IDL_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDL_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_FILIAL_NOME (IDL_NOME)
) ENGINE=InnoDB;

-- ============================
-- TABELA DE FIEIS / ALUNOS
-- ============================
CREATE TABLE IF NOT EXISTS ID_FIEL (
    IDF_ID INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDF_NOME VARCHAR(100) NOT NULL,
    IDF_TELEFONE VARCHAR(20) NULL,
    IDF_EMAIL VARCHAR(150) NOT NULL,
    IDF_CPF CHAR(11) NOT NULL,
    IDF_FILIAL_ID INT UNSIGNED NULL,
    IDF_FUNCAO VARCHAR(50) NULL,
    IDF_ENDERECO VARCHAR(200) NULL,
    IDF_SENHA_HASH VARCHAR(255) NOT NULL,
    IDF_ATIVO TINYINT(1) NOT NULL DEFAULT 1,
    IDF_EMAIL_VERIFICADO_EM DATETIME NULL,
    IDF_ULTIMO_LOGIN_EM DATETIME NULL,
    IDF_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDF_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    IDF_REMOVIDO_EM DATETIME NULL,
    UNIQUE KEY UK_ID_FIEL_EMAIL (IDF_EMAIL),
    UNIQUE KEY UK_ID_FIEL_CPF (IDF_CPF),
    KEY IX_ID_FIEL_FILIAL (IDF_FILIAL_ID),
    KEY IX_ID_FIEL_ATIVO (IDF_ATIVO),
    CONSTRAINT FK_ID_FIEL_FILIAL
        FOREIGN KEY (IDF_FILIAL_ID) REFERENCES ID_FILIAL(IDL_ID)
        ON UPDATE CASCADE
        ON DELETE SET NULL
) ENGINE=InnoDB;

-- ============================
-- TABELA DE ADMINISTRADORES
-- ============================
CREATE TABLE IF NOT EXISTS ID_ADMIN (
    IDA_ID INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDA_FIEL_ID INT UNSIGNED NOT NULL,
    IDA_NIVEL ENUM('SUPER', 'GESTOR', 'EDITOR') NOT NULL DEFAULT 'EDITOR',
    IDA_ATIVO TINYINT(1) NOT NULL DEFAULT 1,
    IDA_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDA_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_ADMIN_FIEL (IDA_FIEL_ID),
    KEY IX_ID_ADMIN_NIVEL (IDA_NIVEL),
    CONSTRAINT FK_ID_ADMIN_FIEL
        FOREIGN KEY (IDA_FIEL_ID) REFERENCES ID_FIEL(IDF_ID)
        ON UPDATE CASCADE
        ON DELETE RESTRICT
) ENGINE=InnoDB;

-- ============================
-- TABELA DE CURSOS
-- ============================
CREATE TABLE IF NOT EXISTS ID_CURSO (
    IDC_ID INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDC_TITULO VARCHAR(180) NOT NULL,
    IDC_DESCRICAO TEXT NULL,
    IDC_CAPA_URL VARCHAR(500) NULL,
    IDC_CARGA_HORARIA_MIN INT UNSIGNED NULL,
    IDC_STATUS ENUM('RASCUNHO', 'PUBLICADO', 'ARQUIVADO') NOT NULL DEFAULT 'RASCUNHO',
    IDC_ADMIN_CRIADOR_ID INT UNSIGNED NULL,
    IDC_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDC_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    KEY IX_ID_CURSO_STATUS (IDC_STATUS),
    KEY IX_ID_CURSO_ADMIN (IDC_ADMIN_CRIADOR_ID),
    CONSTRAINT FK_ID_CURSO_ADMIN
        FOREIGN KEY (IDC_ADMIN_CRIADOR_ID) REFERENCES ID_ADMIN(IDA_ID)
        ON UPDATE CASCADE
        ON DELETE SET NULL
) ENGINE=InnoDB;

-- ============================
-- TABELA DE MODULOS
-- ============================
CREATE TABLE IF NOT EXISTS ID_MODULO (
    IDM_ID INT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDC_ID INT UNSIGNED NOT NULL,
    IDM_TITULO VARCHAR(180) NOT NULL,
    IDM_DESCRICAO TEXT NULL,
    IDM_ORDEM SMALLINT UNSIGNED NOT NULL,
    IDM_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDM_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_MODULO_ORDEM (IDC_ID, IDM_ORDEM),
    KEY IX_ID_MODULO_CURSO (IDC_ID),
    CONSTRAINT FK_ID_MODULO_CURSO
        FOREIGN KEY (IDC_ID) REFERENCES ID_CURSO(IDC_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE
) ENGINE=InnoDB;

-- ============================
-- TABELA DE CONTEUDOS
-- ============================
CREATE TABLE IF NOT EXISTS ID_CONTENT (
    IDCT_ID BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDC_ID INT UNSIGNED NOT NULL,
    IDM_ID INT UNSIGNED NULL,
    IDCT_TIPO ENUM('VIDEO', 'DOCUMENTO', 'IMAGEM', 'AUDIO', 'LINK') NOT NULL,
    IDCT_TITULO VARCHAR(180) NOT NULL,
    IDCT_DESCRICAO TEXT NULL,
    IDCT_URL VARCHAR(500) NOT NULL,
    IDCT_DURACAO_SEGUNDOS INT UNSIGNED NULL,
    IDCT_ORDEM SMALLINT UNSIGNED NOT NULL DEFAULT 1,
    IDCT_PUBLICADO TINYINT(1) NOT NULL DEFAULT 1,
    IDCT_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDCT_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    KEY IX_ID_CONTENT_CURSO (IDC_ID),
    KEY IX_ID_CONTENT_MODULO (IDM_ID),
    KEY IX_ID_CONTENT_TIPO (IDCT_TIPO),
    KEY IX_ID_CONTENT_PUBLICADO (IDCT_PUBLICADO),
    UNIQUE KEY UK_ID_CONTENT_ORDEM_MODULO (IDM_ID, IDCT_ORDEM),
    CONSTRAINT FK_ID_CONTENT_CURSO
        FOREIGN KEY (IDC_ID) REFERENCES ID_CURSO(IDC_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT FK_ID_CONTENT_MODULO
        FOREIGN KEY (IDM_ID) REFERENCES ID_MODULO(IDM_ID)
        ON UPDATE CASCADE
        ON DELETE SET NULL
) ENGINE=InnoDB;

-- ============================
-- TABELA DE MATRICULAS
-- ============================
CREATE TABLE IF NOT EXISTS ID_MATRICULA (
    IDMATR_ID BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDF_ID INT UNSIGNED NOT NULL,
    IDC_ID INT UNSIGNED NOT NULL,
    IDMATR_STATUS ENUM('ATIVA', 'PAUSADA', 'CONCLUIDA', 'CANCELADA') NOT NULL DEFAULT 'ATIVA',
    IDMATR_PERCENTUAL DECIMAL(5,2) NOT NULL DEFAULT 0.00,
    IDMATR_INICIO_EM DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDMATR_CONCLUSAO_EM DATETIME NULL,
    IDMATR_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDMATR_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_MATRICULA_USUARIO_CURSO (IDF_ID, IDC_ID),
    KEY IX_ID_MATRICULA_STATUS (IDMATR_STATUS),
    CONSTRAINT FK_ID_MATRICULA_FIEL
        FOREIGN KEY (IDF_ID) REFERENCES ID_FIEL(IDF_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT FK_ID_MATRICULA_CURSO
        FOREIGN KEY (IDC_ID) REFERENCES ID_CURSO(IDC_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT CK_ID_MATRICULA_PERCENTUAL
        CHECK (IDMATR_PERCENTUAL >= 0.00 AND IDMATR_PERCENTUAL <= 100.00)
) ENGINE=InnoDB;

-- ============================
-- TABELA DE PROGRESSO POR CONTEUDO
-- ============================
CREATE TABLE IF NOT EXISTS ID_PROGRESSO (
    IDPR_ID BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDMATR_ID BIGINT UNSIGNED NOT NULL,
    IDCT_ID BIGINT UNSIGNED NOT NULL,
    IDPR_STATUS ENUM('NAO_INICIADO', 'EM_ANDAMENTO', 'CONCLUIDO') NOT NULL DEFAULT 'NAO_INICIADO',
    IDPR_PERCENTUAL DECIMAL(5,2) NOT NULL DEFAULT 0.00,
    IDPR_TEMPO_ASSISTIDO_SEGUNDOS INT UNSIGNED NOT NULL DEFAULT 0,
    IDPR_ULTIMO_ACESSO_EM DATETIME NULL,
    IDPR_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    IDPR_ATUALIZADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_PROGRESSO_MATRICULA_CONTEUDO (IDMATR_ID, IDCT_ID),
    KEY IX_ID_PROGRESSO_STATUS (IDPR_STATUS),
    CONSTRAINT FK_ID_PROGRESSO_MATRICULA
        FOREIGN KEY (IDMATR_ID) REFERENCES ID_MATRICULA(IDMATR_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT FK_ID_PROGRESSO_CONTEUDO
        FOREIGN KEY (IDCT_ID) REFERENCES ID_CONTENT(IDCT_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE,
    CONSTRAINT CK_ID_PROGRESSO_PERCENTUAL
        CHECK (IDPR_PERCENTUAL >= 0.00 AND IDPR_PERCENTUAL <= 100.00)
) ENGINE=InnoDB;

-- ============================
-- TABELA DE SESSOES (LOGIN)
-- ============================
CREATE TABLE IF NOT EXISTS ID_SESSAO (
    IDS_ID BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDF_ID INT UNSIGNED NOT NULL,
    IDS_TOKEN CHAR(64) NOT NULL,
    IDS_IP VARCHAR(45) NULL,
    IDS_USER_AGENT VARCHAR(255) NULL,
    IDS_EXPIRA_EM DATETIME NOT NULL,
    IDS_REVOGADA TINYINT(1) NOT NULL DEFAULT 0,
    IDS_CRIADA_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_SESSAO_TOKEN (IDS_TOKEN),
    KEY IX_ID_SESSAO_FIEL_EXPIRA (IDF_ID, IDS_EXPIRA_EM),
    CONSTRAINT FK_ID_SESSAO_FIEL
        FOREIGN KEY (IDF_ID) REFERENCES ID_FIEL(IDF_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE
) ENGINE=InnoDB;

-- ============================
-- TABELA DE RECUPERACAO DE SENHA
-- ============================
CREATE TABLE IF NOT EXISTS ID_RECUPERACAO_SENHA (
    IDR_ID BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
    IDF_ID INT UNSIGNED NOT NULL,
    IDR_TOKEN CHAR(64) NOT NULL,
    IDR_EXPIRA_EM DATETIME NOT NULL,
    IDR_USADO_EM DATETIME NULL,
    IDR_CRIADO_EM TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UNIQUE KEY UK_ID_RECUPERACAO_TOKEN (IDR_TOKEN),
    KEY IX_ID_RECUPERACAO_FIEL (IDF_ID),
    CONSTRAINT FK_ID_RECUPERACAO_FIEL
        FOREIGN KEY (IDF_ID) REFERENCES ID_FIEL(IDF_ID)
        ON UPDATE CASCADE
        ON DELETE CASCADE
) ENGINE=InnoDB;

-- ============================
-- DADOS INICIAIS MINIMOS
-- ============================
INSERT INTO ID_FILIAL (IDL_NOME, IDL_CIDADE, IDL_ESTADO)
SELECT 'Matriz', 'Sao Paulo', 'SP'
WHERE NOT EXISTS (
    SELECT 1 FROM ID_FILIAL WHERE IDL_NOME = 'Matriz'
);

-- Observacao importante:
-- A coluna IDF_SENHA_HASH deve armazenar hash gerado no PHP com password_hash().
-- Nao gravar senha em texto puro.

-- Exemplo de consulta para login seguro (executada no PHP com prepared statement):
-- SELECT IDF_ID, IDF_EMAIL, IDF_SENHA_HASH FROM ID_FIEL WHERE IDF_EMAIL = ? AND IDF_ATIVO = 1;

-- ============================
-- INSERTS DE TESTE (SEED)
-- ============================

-- Senha de teste para os hashes abaixo: 123456
INSERT INTO ID_FIEL (
    IDF_NOME, IDF_TELEFONE, IDF_EMAIL, IDF_CPF, IDF_FILIAL_ID,
    IDF_FUNCAO, IDF_ENDERECO, IDF_SENHA_HASH, IDF_ATIVO, IDF_EMAIL_VERIFICADO_EM
)
SELECT
    'Administrador Geral',
    '11900000001',
    'admin@igreja.com',
    '12345678900',
    (SELECT IDL_ID FROM ID_FILIAL WHERE IDL_NOME = 'Matriz' LIMIT 1),
    'Administrador',
    'Rua Central, 100',
    '$2y$10$wH5fR9M5u1kpdXQkYw8vAuiiU9CDfWn2iXfVxIh6yHqG8Qn7x2mQy',
    1,
    NOW()
WHERE NOT EXISTS (
    SELECT 1 FROM ID_FIEL WHERE IDF_EMAIL = 'admin@igreja.com'
);

INSERT INTO ID_FIEL (
    IDF_NOME, IDF_TELEFONE, IDF_EMAIL, IDF_CPF, IDF_FILIAL_ID,
    IDF_FUNCAO, IDF_ENDERECO, IDF_SENHA_HASH, IDF_ATIVO, IDF_EMAIL_VERIFICADO_EM
)
SELECT
    'Joao Silva',
    '11999999999',
    'joao@email.com',
    '11122233344',
    (SELECT IDL_ID FROM ID_FILIAL WHERE IDL_NOME = 'Matriz' LIMIT 1),
    'Aluno',
    'Rua A, 123',
    '$2y$10$2b4h6Q0k1K4S2YVjW0oV2u5vQf2fVnW2wWJ9Hf8S4pM0B7d8Yx4Yq',
    1,
    NOW()
WHERE NOT EXISTS (
    SELECT 1 FROM ID_FIEL WHERE IDF_EMAIL = 'joao@email.com'
);

INSERT INTO ID_FIEL (
    IDF_NOME, IDF_TELEFONE, IDF_EMAIL, IDF_CPF, IDF_FILIAL_ID,
    IDF_FUNCAO, IDF_ENDERECO, IDF_SENHA_HASH, IDF_ATIVO, IDF_EMAIL_VERIFICADO_EM
)
SELECT
    'Maria Oliveira',
    '11888888888',
    'maria@email.com',
    '55566677788',
    (SELECT IDL_ID FROM ID_FILIAL WHERE IDL_NOME = 'Matriz' LIMIT 1),
    'Aluno',
    'Rua B, 456',
    '$2y$10$3f8kP9nR2L0dQ7bT1mUuE.4k9hS8jN6vD5xW4rZ2yA1cB0dE9fGHi',
    1,
    NOW()
WHERE NOT EXISTS (
    SELECT 1 FROM ID_FIEL WHERE IDF_EMAIL = 'maria@email.com'
);

INSERT INTO ID_ADMIN (IDA_FIEL_ID, IDA_NIVEL, IDA_ATIVO)
SELECT
    f.IDF_ID,
    'SUPER',
    1
FROM ID_FIEL f
WHERE f.IDF_EMAIL = 'admin@igreja.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_ADMIN a WHERE a.IDA_FIEL_ID = f.IDF_ID
  );

INSERT INTO ID_CURSO (
    IDC_TITULO, IDC_DESCRICAO, IDC_CAPA_URL, IDC_CARGA_HORARIA_MIN,
    IDC_STATUS, IDC_ADMIN_CRIADOR_ID
)
SELECT
    'Fundamentos da Fe',
    'Curso introdutorio com principios basicos da fe crista.',
    'https://exemplo.com/capas/fundamentos.jpg',
    180,
    'PUBLICADO',
    (SELECT IDA_ID FROM ID_ADMIN ORDER BY IDA_ID LIMIT 1)
WHERE NOT EXISTS (
    SELECT 1 FROM ID_CURSO WHERE IDC_TITULO = 'Fundamentos da Fe'
);

INSERT INTO ID_CURSO (
    IDC_TITULO, IDC_DESCRICAO, IDC_CAPA_URL, IDC_CARGA_HORARIA_MIN,
    IDC_STATUS, IDC_ADMIN_CRIADOR_ID
)
SELECT
    'Vida de Oracao',
    'Curso sobre disciplina espiritual e oracao diaria.',
    'https://exemplo.com/capas/oracao.jpg',
    120,
    'PUBLICADO',
    (SELECT IDA_ID FROM ID_ADMIN ORDER BY IDA_ID LIMIT 1)
WHERE NOT EXISTS (
    SELECT 1 FROM ID_CURSO WHERE IDC_TITULO = 'Vida de Oracao'
);

INSERT INTO ID_MODULO (IDC_ID, IDM_TITULO, IDM_DESCRICAO, IDM_ORDEM)
SELECT
    c.IDC_ID,
    'Modulo 1 - Introducao',
    'Primeiros passos do curso.',
    1
FROM ID_CURSO c
WHERE c.IDC_TITULO = 'Fundamentos da Fe'
  AND NOT EXISTS (
      SELECT 1 FROM ID_MODULO m
      WHERE m.IDC_ID = c.IDC_ID AND m.IDM_ORDEM = 1
  );

INSERT INTO ID_MODULO (IDC_ID, IDM_TITULO, IDM_DESCRICAO, IDM_ORDEM)
SELECT
    c.IDC_ID,
    'Modulo 2 - Pratica',
    'Aplicacoes praticas no dia a dia.',
    2
FROM ID_CURSO c
WHERE c.IDC_TITULO = 'Fundamentos da Fe'
  AND NOT EXISTS (
      SELECT 1 FROM ID_MODULO m
      WHERE m.IDC_ID = c.IDC_ID AND m.IDM_ORDEM = 2
  );

INSERT INTO ID_CONTENT (
    IDC_ID, IDM_ID, IDCT_TIPO, IDCT_TITULO, IDCT_DESCRICAO,
    IDCT_URL, IDCT_DURACAO_SEGUNDOS, IDCT_ORDEM, IDCT_PUBLICADO
)
SELECT
    c.IDC_ID,
    m.IDM_ID,
    'VIDEO',
    'Aula 1 - Boas-vindas',
    'Mensagem inicial do curso.',
    'https://exemplo.com/videos/aula1.mp4',
    900,
    1,
    1
FROM ID_CURSO c
JOIN ID_MODULO m ON m.IDC_ID = c.IDC_ID AND m.IDM_ORDEM = 1
WHERE c.IDC_TITULO = 'Fundamentos da Fe'
  AND NOT EXISTS (
      SELECT 1 FROM ID_CONTENT x
      WHERE x.IDM_ID = m.IDM_ID AND x.IDCT_ORDEM = 1
  );

INSERT INTO ID_CONTENT (
    IDC_ID, IDM_ID, IDCT_TIPO, IDCT_TITULO, IDCT_DESCRICAO,
    IDCT_URL, IDCT_DURACAO_SEGUNDOS, IDCT_ORDEM, IDCT_PUBLICADO
)
SELECT
    c.IDC_ID,
    m.IDM_ID,
    'DOCUMENTO',
    'Apostila 1',
    'Material de apoio em PDF.',
    'https://exemplo.com/docs/apostila1.pdf',
    NULL,
    2,
    1
FROM ID_CURSO c
JOIN ID_MODULO m ON m.IDC_ID = c.IDC_ID AND m.IDM_ORDEM = 1
WHERE c.IDC_TITULO = 'Fundamentos da Fe'
  AND NOT EXISTS (
      SELECT 1 FROM ID_CONTENT x
      WHERE x.IDM_ID = m.IDM_ID AND x.IDCT_ORDEM = 2
  );

INSERT INTO ID_MATRICULA (IDF_ID, IDC_ID, IDMATR_STATUS, IDMATR_PERCENTUAL)
SELECT
    f.IDF_ID,
    c.IDC_ID,
    'ATIVA',
    40.00
FROM ID_FIEL f
JOIN ID_CURSO c ON c.IDC_TITULO = 'Fundamentos da Fe'
WHERE f.IDF_EMAIL = 'joao@email.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_MATRICULA mt
      WHERE mt.IDF_ID = f.IDF_ID AND mt.IDC_ID = c.IDC_ID
  );

INSERT INTO ID_MATRICULA (IDF_ID, IDC_ID, IDMATR_STATUS, IDMATR_PERCENTUAL)
SELECT
    f.IDF_ID,
    c.IDC_ID,
    'ATIVA',
    15.00
FROM ID_FIEL f
JOIN ID_CURSO c ON c.IDC_TITULO = 'Fundamentos da Fe'
WHERE f.IDF_EMAIL = 'maria@email.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_MATRICULA mt
      WHERE mt.IDF_ID = f.IDF_ID AND mt.IDC_ID = c.IDC_ID
  );

INSERT INTO ID_PROGRESSO (
    IDMATR_ID, IDCT_ID, IDPR_STATUS, IDPR_PERCENTUAL,
    IDPR_TEMPO_ASSISTIDO_SEGUNDOS, IDPR_ULTIMO_ACESSO_EM
)
SELECT
    mt.IDMATR_ID,
    ct.IDCT_ID,
    'EM_ANDAMENTO',
    65.00,
    580,
    NOW()
FROM ID_MATRICULA mt
JOIN ID_FIEL f ON f.IDF_ID = mt.IDF_ID
JOIN ID_CURSO c ON c.IDC_ID = mt.IDC_ID
JOIN ID_CONTENT ct ON ct.IDC_ID = c.IDC_ID AND ct.IDCT_ORDEM = 1
WHERE f.IDF_EMAIL = 'joao@email.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_PROGRESSO p
      WHERE p.IDMATR_ID = mt.IDMATR_ID AND p.IDCT_ID = ct.IDCT_ID
  );

INSERT INTO ID_SESSAO (IDF_ID, IDS_TOKEN, IDS_IP, IDS_USER_AGENT, IDS_EXPIRA_EM, IDS_REVOGADA)
SELECT
    f.IDF_ID,
    SHA2(CONCAT('sessao-admin-', f.IDF_EMAIL), 256),
    '127.0.0.1',
    'Mozilla/5.0 Test Agent',
    DATE_ADD(NOW(), INTERVAL 7 DAY),
    0
FROM ID_FIEL f
WHERE f.IDF_EMAIL = 'admin@igreja.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_SESSAO s WHERE s.IDF_ID = f.IDF_ID
  );

INSERT INTO ID_RECUPERACAO_SENHA (IDF_ID, IDR_TOKEN, IDR_EXPIRA_EM, IDR_USADO_EM)
SELECT
    f.IDF_ID,
    SHA2(CONCAT('recuperacao-', f.IDF_EMAIL), 256),
    DATE_ADD(NOW(), INTERVAL 1 DAY),
    NULL
FROM ID_FIEL f
WHERE f.IDF_EMAIL = 'maria@email.com'
  AND NOT EXISTS (
      SELECT 1 FROM ID_RECUPERACAO_SENHA r WHERE r.IDF_ID = f.IDF_ID AND r.IDR_USADO_EM IS NULL
  );

-- ============================
-- CONSULTAS DE CONFERENCIA
-- ============================
SELECT * FROM ID_FILIAL;
SELECT * FROM ID_FIEL;
SELECT * FROM ID_ADMIN;
SELECT * FROM ID_CURSO;
SELECT * FROM ID_MODULO;
SELECT * FROM ID_CONTENT;
SELECT * FROM ID_MATRICULA;
SELECT * FROM ID_PROGRESSO;
SELECT * FROM ID_SESSAO;
SELECT * FROM ID_RECUPERACAO_SENHA;
